--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "psycopg2-binary==2.9.10",
     "pandas==2.2.3",
     "pyzmq==26.2.0",
-    "jinja2==3.1.4"
+    "jinja2==3.1.4",
+    "pydantic==2.9.2",
 ]
 
 # Tests
