--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 license = { text = "MIT" }
 dependencies = [
     "fastapi==0.115.2",
-    "SQLAlchemy==2.0.36",
+    "SQLAlchemy==2.0.35",
     "sqlalchemy-utils==0.41.2",
     "alembic==1.13.3",
     "uvicorn==0.32.0",
@@ -19,6 +19,8 @@ dependencies = [
     "pyzmq==26.2.0",
     "jinja2==3.1.4",
     "pydantic==2.9.2",
+    "inflection==0.5.1",
+    "deepeval==1.5.0",
 ]
 
 # Tests
