ops: fix supervisord.conf

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,26 +1,14 @@
 [supervisord]
 nodaemon=true
 
-[program:alembic]
-command=alembic -c api/alembic.ini upgrade head
-directory=/app
-autostart=true
-autorestart=false
-startretries=0
-startsecs=0
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-priority=1
-
 [program:uvicorn]
-command=uvicorn api.main:app --workers 4
+command=bash -c 'alembic -c api/alembic.ini upgrade head && uvicorn api.main:app --workers 4'
 directory=/app
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 priority=999
-depends_on=alembic
 
 [program:runner]
 command=python -m api.runners
@@ -31,4 +19,3 @@ autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 priority=999
-depends_on=alembic
