--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "MIT" }
 dependencies = [
+    # API
     "fastapi==0.115.2",
     "SQLAlchemy==2.0.35",
     "sqlalchemy-utils==0.41.2",
@@ -21,6 +22,8 @@ dependencies = [
     "pydantic==2.9.2",
     "inflection==0.5.1",
     "deepeval==1.5.0",
+    # Front
+    "streamlit==1.40.1"
 ]
 
 # Tests
