--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -34,12 +34,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Set sanitized_ref_name
+        run: |
+          ref_name=${{ github.ref_name }}
+          sanitized_ref_name=${ref_name//\//_}
+          echo sanitized_ref_name=${sanitized_ref_name} >> $GITHUB_ENV
+
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:${{github.ref_name}}-latest
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:${{env.sanitized_ref_name}}-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
