ops: add streamlit config

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -19,3 +19,12 @@ autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 priority=999
+
+[program:streamlit]
+command=streamlit run ui/demo_streamlit/app.py
+directory=/app
+autostart=true
+autorestart=true
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+priority=999
