fix: improve notebook var names + use public endpoints + [alembic ]fix missing answer.created_at

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:uvicorn]
-command=bash -c 'alembic -c api/alembic.ini upgrade head && uvicorn api.main:app --workers 4'
+command=bash -c 'alembic -c api/alembic.ini upgrade head && uvicorn api.main:app --host 0.0.0.0 --port 8000 --workers 4'
 directory=/app
 autostart=true
 autorestart=true
