--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,9 @@ dependencies = [
 # Tests
 
 [project.optional-dependencies]
-test = ["pytest==8.3.3", "pytest-asyncio==0.24.0"]
+test = ["pytest==8.3.3", 
+        "pytest-asyncio==0.24.0",
+        "pre-commit==3.6.0"]
 
 [tool.pytest.ini_options]
 testpaths = ["api/tests"]
