--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository }}/eg1
   IMAGE_TAG: ${{ github.sha }}
@@ -46,6 +45,7 @@ jobs:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:${{env.sanitized_ref_name}}-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64
 
   deploy:
     name: Deploy from ${{ github.ref_name }}/${{ github.sha }}
