--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ dependencies = [
     "deepeval==2.4.9",
     "ragas==0.2.13",
     # Front
-    "streamlit==1.40.1"
+    "streamlit==1.40.1",
+    "plotly==5.22.0"
 ]
 
 # Tests
