--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
 name = "eg1"
-version = "0.2"
+version = "0.3.0"
 description = "Albert Evaluations"
 authors = [{ name = "Etalab", email = "etalab@modernisation.gouv.fr" }]
 requires-python = ">=3.10"
 readme = "README.md"
 license = { text = "MIT" }
+keywords = ["IA", "LLM", "evaluation"]
 dependencies = [
     # API
     "fastapi==0.115.2",
@@ -30,6 +31,32 @@ dependencies = [
     "plotly==5.22.0"
 ]
 
+
+[project.urls]
+Homepage = "https://eg1.etalab.gouv.fr"
+Source = "https://github.com/etalab-ia/eg1"
+Tracker = "https://github.com/etalab-ia/eg1/issues"
+Documentation = "https://github.com/etalab-ia/eg1"
+
+[project.scripts]
+eg1_generate_answers = "eg1.scripts.run_answers.run_answers:main"
+
+# Packaging
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = {find = {where = ["."], include = ["eg1*"]}}
+include-package-data = true
+
+[tool.setuptools.package-data]
+eg1_config = ["config/*"]
+
+[tool.pdm]
+distribution = false
+
 # Tests
 
 [project.optional-dependencies]
@@ -53,9 +80,4 @@ exclude = ["alembic/versions/"]
 known-third-party = ["alembic"]
 known-first-party = ["api", "config", "tests", "ui"]
 
-[tool.setuptools]
-py-modules = []
-
-[tool.pdm]
-distribution = false
 
