--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:uvicorn]
-command=bash -c 'alembic -c api/alembic.ini upgrade head && uvicorn api.main:app --host 0.0.0.0 --port 8000 --workers 4'
+command=bash -c 'alembic -c eg1/api/alembic.ini upgrade head && uvicorn eg1.api.main:app --host 0.0.0.0 --port 8000 --workers 4'
 directory=/app
 autostart=true
 autorestart=true
@@ -13,7 +13,7 @@ stderr_logfile_maxbytes = 0
 priority=999
 
 [program:runner]
-command=python -m api.runners
+command=python -m eg1.runners
 directory=/app
 environment=PYTHONPATH=.,LOG_LEVEL="INFO"
 autostart=true
