--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,9 @@ dependencies = [
     "jinja2==3.1.4",
     "pydantic==2.10.1",
     "inflection==0.5.1",
+    "docopt-ng==0.9.0",
     "deepeval==2.5.2",
     "ragas==0.2.14",
-    # MCP
-    "mcp==1.2.1",
     # Front
     "streamlit==1.40.1",
     "plotly==5.22.0"
