feat: add experiment test + fix warning pydantic issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ test = ["pytest==8.3.3",
         "pre-commit==3.6.0"]
 
 [tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
 testpaths = ["tests/"]
 python_files = ["test_*.py"]
 python_classes = ["Test*"]
