hotfix: update supervisord.conf

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -25,7 +25,7 @@ stderr_logfile_maxbytes = 0
 priority=999
 
 [program:streamlit]
-command=streamlit run ui/demo_streamlit/app.py
+command=streamlit run eg1/ui/demo_streamlit/app.py
 directory=/app
 autostart=true
 autorestart=true
