--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -10,6 +10,12 @@ env:
 
 jobs:
   build-and-push:
+    # Skip if commit message starts with specific strings
+    if: >
+      !startsWith(github.event.head_commit.message, 'Update Readme') &&
+      !startsWith(github.event.head_commit.message, 'Update Changelog') &&
+      !startsWith(github.event.head_commit.message, 'CI skip') &&
+      !startsWith(github.event.head_commit.message, 'skip CI')
     name: Build and push from ${{ github.ref_name }}/${{ github.sha }}
     outputs:
       commit_title: ${{ steps.get_head_commit_title.outputs.title }}
