--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -14,6 +14,7 @@ jobs:
     if: >
       !startsWith(github.event.head_commit.message, 'Update Readme') &&
       !startsWith(github.event.head_commit.message, 'Update Changelog') &&
+      !startsWith(github.event.head_commit.message, 'Update package') &&
       !startsWith(github.event.head_commit.message, 'CI skip') &&
       !startsWith(github.event.head_commit.message, 'skip CI')
     name: Build and push from ${{ github.ref_name }}/${{ github.sha }}
