--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -12,11 +12,12 @@ jobs:
   build-and-push:
     # Skip if commit message starts with specific strings
     if: >
-      !startsWith(github.event.head_commit.message, 'Update Readme') &&
-      !startsWith(github.event.head_commit.message, 'Update Changelog') &&
-      !startsWith(github.event.head_commit.message, 'Update package') &&
-      !startsWith(github.event.head_commit.message, 'CI skip') &&
-      !startsWith(github.event.head_commit.message, 'skip CI')
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'update readme') &&
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'update changelog') &&
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'update package') &&
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'update justfile') &&
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'ci skip') &&
+      !startsWith(github.event.head_commit.message.toLowerCase(), 'skip ci')
     name: Build and push from ${{ github.ref_name }}/${{ github.sha }}
     outputs:
       commit_title: ${{ steps.get_head_commit_title.outputs.title }}
