files config param llm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "deepeval==2.5.2",
     "ragas==0.2.14",
     "ecologits==0.6.2",
+    "toml==0.10.2",
     # Front
     "streamlit==1.40.1",
     "plotly==5.22.0"
