--- a/eg1/config/models-extra-info.toml
+++ b/eg1/config/models-extra-info.toml
@@ -78,16 +78,6 @@ url = "https://huggingface.co/jpacifico/jpacifico/Chocolatine-2-14B-Instruct-v2.
 simple_name = "Chocolatine 2 14B"
 organisation = "jpacifico"
 params = 14
-icon_path = "huggingface.svg"
-license = "MIT"
-excerpt = "Reposant sur le modèle Qwen2.5 de la société Alibaba, ce modèle a été spécialisé sur la langue française."
-description = "Reposant sur le modèle Qwen2.5 de la société Alibaba, ce modèle a été spécialisé sur la langue française. Le nom du modèle 'Chocolatine' est un clin d'oeil au projet CroissantLLM qui était une des première initiatives de création de modèle open-source de petite taille optimisé pour le français."
-
-["Chocolatine-2-14B-Instruct-v2.0.3]
-url = "https://huggingface.co/jpacifico/jpacifico/Chocolatine-2-14B-Instruct-v2.0.3"
-simple_name = "Chocolatine 2 14B"
-organisation = "jpacifico"
-params = 14
 quantization = "q8"
 icon_path = "huggingface.svg"
 license = "MIT"
@@ -140,7 +130,7 @@ organisation = "Google"
 icon_path = "google.png"
 friendly_size = "XL"
 license = "propriétaire Gemini"
-description = "Sorti en février 2024, ce modèle multilingue et multimodal est capable de traiter un très grand volume de données d’entrées qu’il s’agisse de données textuelles, d’image, de son (jusqu’à 11h d’audio) ou de vidéo (jusqu’à une heure). C’est le modèle LLM qui alimente le chatbot Gemini de Google."
+description = "Sorti en février 2024, ce modèle multilingue et multimodal est capable de traiter un très grand volume de données d'entrées qu'il s'agisse de données textuelles, d'image, de son (jusqu'à 11h d'audio) ou de vidéo (jusqu'à une heure). C'est le modèle LLM qui alimente le chatbot Gemini de Google."
 excerpt = "Sorti en février 2024, ce modèle multimodal s'applique à la génération de textes et d'images, l'analyse de vidéos et la transcription d'audio."
 release_date = "02/2024"
 
@@ -153,7 +143,7 @@ organisation = "Google"
 icon_path = "google.png"
 friendly_size = "XL"
 license = "propriétaire Gemini"
-description = "Sorti en février 2024 et amélioré en septembre 2024, ce modèle multilingue et multimodal est capable de traiter un très grand volume de données d’entrées qu’il s’agisse de données textuelles, d’image, de son (jusqu’à 11h d’audio) ou de vidéo (jusqu’à une heure). C’est le modèle LLM qui alimente le chatbot Gemini de Google."
+description = "Sorti en février 2024 et amélioré en septembre 2024, ce modèle multilingue et multimodal est capable de traiter un très grand volume de données d'entrées qu'il s'agisse de données textuelles, d'image, de son (jusqu'à 11h d'audio) ou de vidéo (jusqu'à une heure). C'est le modèle LLM qui alimente le chatbot Gemini de Google."
 excerpt = "Sorti en septembre 2024, ce modèle multimodal s'applique à la génération de textes et d'images, l'analyse de vidéos et la transcription d'audio."
 release_date = "09/2024"
 
@@ -191,7 +181,7 @@ params = 27
 excerpt = "Modèle performant avec une taille correcte, son coût relativement élevé le destine à des usages spécifiques nécessitant une grande précision."
 description = "Avec trois fois plus de paramètre que son petit frère de la famille Gemma 2, ce modèle est plus précis pour répondre aux instructions. Le modèle sollicité ici est la version quantisée (q8)."
 
-[Gemma-2-9B-it]
+["Gemma-2-9B-it"]
 url = "https://huggingface.co/google/gemma-2-9b-it"
 simple_name = "Gemma 2 9B"
 organisation = "Google"
@@ -202,7 +192,7 @@ excerpt = "Petit frère de la famille Gemma 2, ce modèle sorti en juin 2024 est
 description = "Petit frère de la famille Gemma 2, ce modèle sorti en juin 2024 est entrainé pour répondre à des instructions spécifiques, traiter des requêtes complexes et offrir des solutions créatives."
 release_date = "06/2024"
 
-[gemma-2-2b-it]
+["gemma-2-2b-it"]
 url = "https://huggingface.co/google/gemma-2-2b-it"
 simple_name = "Gemma 2 2B"
 organisation = "Google"
@@ -289,7 +279,7 @@ description = "Modèle lancé en juillet 2024 et remplaçant GPT-3.5, GPT-4o min
 excerpt = "Le plus petit des deux modèles sur lesquels repose ChatGPT d'OpenAI, lancé en juillet 2024."
 release_date = "07/2024"
 
-[gpt-4o]
+["gpt-4o"]
 url = "https://platform.openai.com/docs/models/gpt#gpt-4o"
 simple_name = "GPT-4o"
 organisation = "OpenAI"
@@ -300,7 +290,7 @@ description = "Modèle lancé en août 2024 et successeur de GPT-4, GPT-4o est u
 excerpt = "Le plus grand des deux modèles sur lesquels repose ChatGPT d'OpenAI, lancé en août 2024."
 release_date = "08/2024"
 
-["Hermes-3-Llama-3.1-405B""]
+["Hermes-3-Llama-3.1-405B"]
 url = "https://huggingface.co/NousResearch/Hermes-3-Llama-3.1-405B"
 simple_name = "Hermes 3 405B"
 organisation = "Nous"
@@ -336,7 +326,7 @@ params = 40
 license = "propriétaire Liquid"
 release_date = "09/2024"
 
-["Meta-Llama-3.1-405B-Instruct"]
+["meta-Llama-3.1-405B-Instruct"]
 url = "https://huggingface.co/meta-llama/Meta-Llama-3.1-405B-Instruct"
 simple_name = "Llama 3.1 405B"
 organisation = "Meta"
@@ -347,18 +337,18 @@ params = 405
 license = "Llama 3.1"
 release_date = "07/2024"
 
-["Meta-Llama-3.1-8B-Instruct"]
+["meta-Llama-3.1-8B-Instruct"]
 url = "https://huggingface.co/meta-llama/Meta-Llama-3.1-8B-Instruct"
 simple_name = "Llama 3.1 8B"
 organisation = "Meta"
 icon_path = "meta.svg"
 excerpt = "Version la plus légère de Llama 3.1, ce modèle est rapide et adapté aux applications courantes. Sorti en avril 2024, les données sur lesquelles il a été entraîné remontent au mois de décembre 2023."
-description = "Lancé en avril 2024, ce modèle cadet de la famille Llama 3.1 a été entrainé sur plus de 15 000 milliards de tokens, puis spécialisé pour le dialogue à partir de données d’instructions et d’annotations faites par des humains. Il est adapté aux tâches multilingues et au traitement de longs textes pouvant aller jusqu’à 128 000 tokens."
+description = "Lancé en avril 2024, ce modèle cadet de la famille Llama 3.1 a été entrainé sur plus de 15 000 milliards de tokens, puis spécialisé pour le dialogue à partir de données d'instructions et d'annotations faites par des humains. Il est adapté aux tâches multilingues et au traitement de longs textes pouvant aller jusqu'à 128 000 tokens."
 params = 8
 license = "Llama 3.1"
 release_date = "04/2024"
 
-["llama-3.1-70b"]
+["llama-3.1-70b-instruct"]
 url = "https://huggingface.co/meta-llama/Meta-Llama-3.1-70B-Instruct"
 params = 70
 simple_name = "Llama 3.1 70B"
@@ -369,7 +359,20 @@ description = "Comme les autres modèles de la famille Llama 3.1, ce modèle sor
 license = "Llama 3.1"
 release_date = "04/2024"
 
-["llama-3.3-70b"]
+["meta-Llama-3.1-70b-instruct-fp8"]
+url = "https://huggingface.co/neuralmagic/Meta-Llama-3.1-70B-Instruct-FP8"
+simple_name = "Llama 3.1 70B Instruct FP8"
+organisation = "Meta / Neuralmagic"
+icon_path = "meta.webp"
+friendly_size = "XL"
+excerpt = "Sorti en avril 2025, ce modèle Llama 3.1 70B Instruct est une version quantifiée FP8 du grand modèle open-source de Meta, optimisée par Neuralmagic pour une inférence plus rapide et une empreinte mémoire réduite."
+description = "Sorti en avril 2025, Meta-Llama-3.1-70B-Instruct-FP8 est une version quantifiée FP8 du modèle Llama 3.1 70B Instruct de Meta, proposée par Neuralmagic. Cette quantification permet de réduire la consommation mémoire et d'accélérer l'inférence, tout en conservant des performances proches du modèle d'origine. Il est adapté aux tâches d'assistance conversationnelle et d'instruction-following, avec un contexte étendu, et bénéficie des dernières avancées de Meta sur la série Llama 3.1."
+total_params = 70  # En milliards
+active_params = 70  # Architecture dense, pas de MoE
+license = "Meta Llama 3 Community License"
+release_date = "04/2025"
+
+["llama-3.3-70b-instruct"]
 url = "https://huggingface.co/meta-llama/Llama-3.3-70B-Instruct"
 params = 70
 simple_name = "Llama 3.3 70B"
@@ -391,23 +394,23 @@ description = "Doté de 70 milliards de paramètres, ce modèle est un fine-tune
 license = "Llama 3.1"
 release_date = "10/2024"
 
-[Meta-Llama-3-70B-Instruct]
+["Meta-Llama-3-70B-Instruct"]
 params = 70
 simple_name = "Llama 3 70B"
 organisation = "Meta"
 icon_path = "meta.svg"
 excerpt = "Lancé en avril 2024, ce modèle a été entrainé sur plus de 15 000 milliards de tokens mais supporte un contexte relativement restreint de 8000 tokens."
-description = "Lancé en avril 2024, ce modèle a été entrainé sur plus de 15 000 milliards de tokens, puis spécialisé pour le dialogue à partir de données d’instructions et d’annotations faites par des humains. Il supporte un contexte de 8000 tokens."
+description = "Lancé en avril 2024, ce modèle a été entrainé sur plus de 15 000 milliards de tokens, puis spécialisé pour le dialogue à partir de données d'instructions et d'annotations faites par des humains. Il supporte un contexte de 8000 tokens."
 license = "Llama 3 Community"
 release_date = "04/2024"
 
-[Meta-Llama-3-8B-Instruct]
+["Meta-Llama-3-8B-Instruct"]
 params = 8
 simple_name = "Llama 3 8B"
 organisation = "Meta"
 icon_path = "meta.svg"
-description = "Petit frère de la famille Llama 3, ce modèle est optimisé pour les dialogues, avec une attention particulière portée sur l’efficacité et la sécurité."
-excerpt = "Petit frère de la famille Llama 3, ce modèle est optimisé pour les dialogues, avec une attention particulière portée sur l’efficacité et la sécurité."
+description = "Petit frère de la famille Llama 3, ce modèle est optimisé pour les dialogues, avec une attention particulière portée sur l'efficacité et la sécurité."
+excerpt = "Petit frère de la famille Llama 3, ce modèle est optimisé pour les dialogues, avec une attention particulière portée sur l'efficacité et la sécurité."
 license = "Llama 3 Community"
 
 ["mistral-small-24B-Instruct-2501"]
@@ -421,18 +424,18 @@ excerpt = "Sorti en janvier 2025, ce modèle est spécialisé dans le multilingu
 license = "Apache 2.0"
 release_date = "01/2025"
 
-[mistral-nemo-2407]
+["mistral-nemo-2407"]
 url = "https://huggingface.co/mistralai/Mistral-Nemo-Instruct-2407"
 simple_name = "Mistral Nemo"
 params = 12
 organisation = "Mistral"
 icon_path = "mistral.png"
-description = "Sorti en juillet 2024, ce modèle de petit gabarit est entraîné pour des tâches de raisonnement, de connaissances générales et de programmation. Il utilise le tokenizer Tekken, efficace pour compresser des textes allant jusqu’à 128 000 tokens en plus de 100 langues."
+description = "Sorti en juillet 2024, ce modèle de petit gabarit est entraîné pour des tâches de raisonnement, de connaissances générales et de programmation. Il utilise le tokenizer Tekken, efficace pour compresser des textes allant jusqu'à 128 000 tokens en plus de 100 langues."
 excerpt = "Optimisé pour un temps de réaction rapide, ce modèle est idéal pour des applications nécessitant des réponses immédiates et peut supporter un contexte de 128k tokens en plus de 100 langues. Sorti en juillet 2024."
 license = "Apache 2.0"
 release_date = "07/2024"
 
-[ministral-8b-instruct-2410]
+["ministral-8b-instruct-2410"]
 url = "https://huggingface.co/mistralai/Ministral-8B-Instruct-2410"
 simple_name = "Ministral"
 params = 8
@@ -451,7 +454,7 @@ total_params = 176
 organisation = "Mistral"
 icon_path = "mistral.png"
 excerpt = "Ce modèle multilingue sorti en avril 2024 a particulièrement été entraîné en anglais, français, allemand, italien et espagnol ainsi que sur des tâches de mathématiques, programmation et raisonnement."
-description = "L’architecture SMoE (sparse mixture of experts) de ce modèle le rend plus rapide et optimise le rapport entre sa taille et son coût. Seuls 39Mds de paramètres sont actifs sur 141Mds. La fenêtre contextuelle de 64000 tokens permet de rappeler des informations précises à partir de grands documents. Sorti en avril 2024."
+description = "L'architecture SMoE (sparse mixture of experts) de ce modèle le rend plus rapide et optimise le rapport entre sa taille et son coût. Seuls 39Mds de paramètres sont actifs sur 141Mds. La fenêtre contextuelle de 64000 tokens permet de rappeler des informations précises à partir de grands documents. Sorti en avril 2024."
 license = "Apache 2.0"
 release_date = "04/2024"
 
@@ -462,7 +465,7 @@ organisation = "Mistral"
 active_params = 14
 total_params = 56
 icon_path = "mistral.png"
-description = "Petit frère de la famille Mixtral, ce modèle est capable de traiter des contextes de 32 000 tokens et supporte l'anglais, le français, l'italien, l'allemand et l'espagnol. Grâce à l’architecture SMoE (sparse mixture of experts), seule une fraction des paramètres est activée pour chaque inférence, réduisant ainsi les coûts et la latence."
+description = "Petit frère de la famille Mixtral, ce modèle est capable de traiter des contextes de 32 000 tokens et supporte l'anglais, le français, l'italien, l'allemand et l'espagnol. Grâce à l'architecture SMoE (sparse mixture of experts), seule une fraction des paramètres est activée pour chaque inférence, réduisant ainsi les coûts et la latence."
 excerpt = "Ce modèle entraîné sur un corpus multilingue est efficace pour des tâches variées et peu complexes."
 license = "Apache 2.0"
 
@@ -488,7 +491,7 @@ description = "Modèle optimisé pour les tâches de raisonnement STEM (science,
 excerpt = "o3-mini est fait pour le raisonnement et le code. Il offre un bon équilibre entre performance, coût et latence, tout en étant plus petit que d'autres modèles de chez OpenAI."
 release_date = "11/2024"
 
-[phi-3-mini-4k]
+["phi-3-mini-4k"]
 url = "https://huggingface.co/microsoft/Phi-3-mini-4k-instruct"
 simple_name = "Phi-3-Mini"
 organisation = "Microsoft"
@@ -519,7 +522,7 @@ description = "Modèle de décembre 2024 de la famille Phi, remplaçant Phi-3.5,
 excerpt = "Modèle de décembre 2024 de la famille Phi, remplaçant Phi-3.5, ce petit modèle a été entrainé sur une dizaine de milliards de tokens, soit un gros corpus synthétique et filtré issu du web."
 release_date = "12/2024"
 
-[Phi-3-small-8k-Instruct]
+["Phi-3-small-8k-Instruct"]
 license = "MIT"
 simple_name = "Phi-3-small-8k-Instruct"
 description = "Grand frère de la famille Phi3, ce modèle supporte un contexte de 8000 tokens et a été entrainé sur des jeux de données synthétiques et issus du web filtré."
@@ -543,26 +546,26 @@ description = "Modèle de la famille CodeQwen et produit par l'entreprise chinoi
 url = "https://huggingface.co/Qwen/Qwen2.5-Coder-32B-Instruct"
 release_date = "11/2024"
 
-[Qwen2-57B-A14B-Instruct]
+["Qwen2-57B-A14B-Instruct"]
 simple_name = "Qwen2-57B-A14B-Instruct"
 organisation = "Alibaba"
 icon_path = "qwen.jpg"
 license = "Apache 2.0"
 
-[Qwen2-72b-instruct]
+["Qwen2-72b-instruct"]
 url = "https://huggingface.co/Qwen/Qwen2-72B-Instruct"
 simple_name = "Qwen2-72b-instruct"
 organisation = "Alibaba"
 icon_path = "qwen.jpg"
 license = "Apache 2.0"
 
-[Qwen2-7B-instruct]
+["Qwen2-7B-instruct"]
 url = "https://huggingface.co/Qwen/Qwen2-7B-Instruct"
 simple_name = "Qwen2-7B"
 organisation = "Alibaba"
 icon_path = "qwen.jpg"
-description = "Petit frère de la famille Qwen2 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu’à 130 000 tokens pour traiter de longs textes."
-excerpt = "Supportant un contexte de 130k tokens, ce petit modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d’analyse et de raisonnement."
+description = "Petit frère de la famille Qwen2 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu'à 130 000 tokens pour traiter de longs textes."
+excerpt = "Supportant un contexte de 130k tokens, ce petit modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d'analyse et de raisonnement."
 params = 7
 license = "Apache 2.0"
 
@@ -572,8 +575,8 @@ simple_name = "Qwen2.5-7B"
 organisation = "Alibaba"
 icon_path = "qwen.jpg"
 dataset = "private"
-description = "Petit modèle de la famille Qwen2.5 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu’à 130 000 tokens pour traiter de longs textes."
-excerpt = "Supportant un contexte de 130k tokens, ce modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d’analyse et de raisonnement."
+description = "Petit modèle de la famille Qwen2.5 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu'à 130 000 tokens pour traiter de longs textes."
+excerpt = "Supportant un contexte de 130k tokens, ce modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d'analyse et de raisonnement."
 params = 7
 license = "Apache 2.0"
 
@@ -582,8 +585,8 @@ url = "https://huggingface.co/Qwen/Qwen2.5-32B-Instruct"
 simple_name = "Qwen2.5-32B"
 organisation = "Alibaba"
 icon_path = "qwen.jpg"
-description = "Modèle intermédiaire de la famille Qwen2.5 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu’à 130 000 tokens pour traiter de longs textes."
-excerpt = "Supportant un contexte de 130k tokens, ce modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d’analyse et de raisonnement."
+description = "Modèle intermédiaire de la famille Qwen2.5 et produit par l'entreprise chinoise Alibaba, ce modèle peut prendre en charge jusqu'à 130 000 tokens pour traiter de longs textes."
+excerpt = "Supportant un contexte de 130k tokens, ce modèle multilingue et polyvalent est performant pour des tâches de traduction, de résumé, d'analyse et de raisonnement."
 params = 32
 license = "Apache 2.0"
 
@@ -608,7 +611,7 @@ excerpt = "Yi 1.5 est un modèle de l'entreprise chinoise 01-ai, spécialisé en
 params = 9
 license = "Apache 2.0"
 
-# [Vicuna-13B]
+# ["Vicuna-13B"]
 # simple_name = "Vicuna-13B"
 # organisation = "Meta"
 # # icon_path = "meta.svg"
@@ -616,7 +619,7 @@ license = "Apache 2.0"
 # distribution = "open-weights"
 # conditions = "restricted"
 
-# [Vicuna-33B]
+# ["Vicuna-33B"]
 # simple_name = "Vicuna-33B"
 # organisation = "LMSYS"
 # # icon_path = "lmsys.png"
