--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ dependencies = [
     "pydantic==2.10.1",
     "inflection==0.5.1",
     "docopt-ng==0.9.0",
+    "aiofiles==24.1.0",
+    "pyarrow==19.0.1",
     "deepeval==2.5.2",
     "ragas==0.2.14",
     # Front
