add carbon impact in answer (#142)
* add carbon impact in answser - first step

* Update tasks.py

* fix: disallow model_judge patch for experiment and experiment_set

* Feat/leaderboard (#141)

* add prompt syst

* add ruff info in contributong

* sort all def used in differents view in a utils file

* ruff

* change order column

* fix nb ligne of leaderboard

---------

Co-authored-by: Audrey_CLEVY <audrey_clevy@airdeaureyclevy.home>

* ruff

* comment

* add format

* files config param llm

* fix toml

* add estimation if model unknown

* add //2 for quantiztion model

* add withEco in schema

* add whisper

* impact calcul in file utils_eco

* change schema for impact eco in answer

* fix order alembic migration

---------

Co-authored-by: Audrey_CLEVY <audrey_clevy@airdeaureyclevy.home>
Co-authored-by: Adrien D. <dtrckd@gmail.com>
Co-authored-by: Audrey_CLEVY <audrey_clevy@MacBook-Air-de-Audrey-CLEVY.local>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dependencies = [
     "deepeval==2.5.2",
     "ragas==0.2.14",
     "rapidfuzz==3.13.0",
+    "ecologits==0.6.2",
+    "toml==0.10.2",
     # Front
     "streamlit==1.40.1",
     "plotly==5.22.0"
