--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:uvicorn]
-command=bash -c 'alembic -c eg1/api/alembic.ini upgrade head && uvicorn eg1.api.main:app --host 0.0.0.0 --port 8000 --workers 4'
+command=bash -c 'alembic -c evalap/api/alembic.ini upgrade head && uvicorn evalap.api.main:app --host 0.0.0.0 --port 8000 --workers 4'
 directory=/app
 autostart=true
 autorestart=true
@@ -13,7 +13,7 @@ stderr_logfile_maxbytes = 0
 priority=999
 
 [program:runner]
-command=python -m eg1.runners
+command=python -m evalap.runners
 directory=/app
 environment=PYTHONPATH=.,LOG_LEVEL="INFO"
 autostart=true
@@ -25,7 +25,7 @@ stderr_logfile_maxbytes = 0
 priority=999
 
 [program:streamlit]
-command=streamlit run eg1/ui/demo_streamlit/app.py
+command=streamlit run evalap/ui/demo_streamlit/app.py
 directory=/app
 autostart=true
 autorestart=true
