--- a/compose.yml
+++ b/compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: eg1-app:dev
+    image: evalap-app:dev
     ports:
       - "8000:8000"
       - "8501:8501" 
