--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 env:
-  IMAGE_NAME: ghcr.io/${{ github.repository.toLowerCase() }}/evalap
+  IMAGE_NAME: ghcr.io/${{ github.repository.lowercase }}/evalap
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
