--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - improve_build_time
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository }}/evalap
   IMAGE_TAG: ${{ github.sha }}
@@ -53,8 +54,12 @@ jobs:
           context: .
           push: true
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:${{env.sanitized_ref_name}}-latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: |
+            type=gha
+            type=registry,ref=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}:cache
+          cache-to: |
+            type=gha,mode=max
+            type=registry,ref=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}:cache,mode=max
           platforms: linux/amd64,linux/arm64
 
   deploy:
