--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -56,10 +56,10 @@ jobs:
           tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:${{env.sanitized_ref_name}}-latest
           cache-from: |
             type=gha
-            type=registry,ref=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}:cache
+            type=registry,ref=${{ env.IMAGE_NAME }}:cache
           cache-to: |
             type=gha,mode=max
-            type=registry,ref=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}:cache,mode=max
+            type=registry,ref=${{ env.IMAGE_NAME }}:cache,mode=max
           platforms: linux/amd64,linux/arm64
 
   deploy:
