chore: update dependency pins to use ~= operator and exclude uv.lock from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ lib64/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-.virtual_documents/ 
+.virtual_documents/
 
 # Environments
 .DS_Store
@@ -89,3 +89,4 @@ pdm.lock
 *.lock
 .envrc
 .direnv/
+!uv.lock
