--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,31 +9,31 @@ license = { text = "MIT" }
 keywords = ["IA", "LLM", "evaluation"]
 dependencies = [
     # API
-    "fastapi==0.115.2",
-    "SQLAlchemy==2.0.35",
-    "sqlalchemy-utils==0.41.2",
-    "alembic==1.13.3",
-    "uvicorn==0.32.0",
-    "requests==2.32.3",
-    "python-dotenv==1.0.1",
-    "psycopg2-binary==2.9.10",
-    "pandas==2.2.3",
-    "pyzmq==26.2.0",
-    "jinja2==3.1.4",
-    "pydantic==2.10.1",
-    "inflection==0.5.1",
-    "docopt-ng==0.9.0",
-    "pillow==11.1.0",
-    "aiofiles==24.1.0",
-    "pyarrow==19.0.1",
-    "deepeval==2.5.2",
-    "ragas==0.2.14",
-    "rapidfuzz==3.13.0",
-    "ecologits==0.6.2",
-    "toml==0.10.2",
+    "fastapi~=0.115.2",
+    "SQLAlchemy~=2.0.35",
+    "sqlalchemy-utils~=0.41.2",
+    "alembic~=1.13.3",
+    "uvicorn~=0.32.0",
+    "requests~=2.32.3",
+    "python-dotenv~=1.0.1",
+    "psycopg2-binary~=2.9.10",
+    "pandas~=2.2.3",
+    "pyzmq~=26.2.0",
+    "jinja2~=3.1.4",
+    "pydantic~=2.10.1",
+    "inflection~=0.5.1",
+    "docopt-ng~=0.9.0",
+    "pillow~=11.1.0",
+    "aiofiles~=24.1.0",
+    "pyarrow~=19.0.1",
+    "deepeval~=2.5.2",
+    "ragas~=0.2.14",
+    "rapidfuzz~=3.13.0",
+    "ecologits~=0.6.2",
+    "toml~=0.10.2",
     # Front
-    "streamlit==1.40.1",
-    "plotly==5.22.0"
+    "streamlit~=1.40.1",
+    "plotly~=5.22.0"
 ]
 
 
