--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,25 +15,25 @@ dependencies = [
     "alembic~=1.13.3",
     "uvicorn~=0.32.0",
     "requests~=2.32.3",
-    "python-dotenv~=1.0.1",
+    "python-dotenv>=1.1.1,<2.0.0",
     "psycopg2-binary~=2.9.10",
     "pandas~=2.2.3",
     "pyzmq~=26.2.0",
     "jinja2~=3.1.4",
-    "pydantic~=2.10.1",
+    "pydantic>=2.11.7,<3.0.0",
     "inflection~=0.5.1",
     "docopt-ng~=0.9.0",
     "pillow~=11.1.0",
     "aiofiles~=24.1.0",
     "pyarrow~=19.0.1",
-    "deepeval~=2.5.2",
+    "deepeval~=3.4.9",
     "ragas~=0.2.14",
     "rapidfuzz~=3.13.0",
     "ecologits~=0.6.2",
     "toml~=0.10.2",
     # Front
     "streamlit~=1.40.1",
-    "plotly~=5.22.0"
+    "plotly~=5.22.0",
 ]
 
 
