--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -31,7 +31,7 @@ jobs:
         run: uv python install ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: uv sync --locked --dev --no-editable --extra test
+        run: uv sync --locked --all-extras --dev --no-editable
 
       - name: Run pre-commit hooks
         run: uv run pre-commit run --all-files
