--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -59,6 +59,7 @@ jobs:
 
       - name: Setup test database
         env:
+          ALBERT_API_KEY: ${{ secrets.ALBERT_API_KEY }}
           POSTGRES_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/evalap_test
         run: |
           uv run alembic -c evalap/api/alembic.ini upgrade head
