fix: use SQLAlchemy-compatible null comparison and add ruff ignore for E711

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -95,6 +95,10 @@ unfixable = []
 known-third-party = ["alembic"]
 known-first-party = ["api", "config", "tests", "ui"]
 
+[tool.ruff.lint.per-file-ignores]
+# Ignore E711 for SQLAlchemy null comparisons
+"evalap/api/crud.py" = ["E711"]
+
 [dependency-groups]
 dev = [
     "pre-commit>=4.3.0",
