fix: update SQLAlchemy null comparisons from `is None` to `== None` and adjust ruff config to ignore E711

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,14 +90,12 @@ select = [
 ]
 fixable = ["ALL"]
 unfixable = []
+# Disable E711 specifically to prevent issues with SQLAlchemy
+ignore = ["E711"]
 
 [tool.ruff.lint.isort]
 known-third-party = ["alembic"]
 known-first-party = ["api", "config", "tests", "ui"]
-
-[tool.ruff.lint.per-file-ignores]
-# Ignore E711 for SQLAlchemy null comparisons
-"evalap/api/crud.py" = ["E711"]
 
 [dependency-groups]
 dev = [
