--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Install dependencies
         run: uv sync --locked --all-extras --dev --no-editable
 
-      - name: Run pre-commit hooks
-        run: uv run pre-commit run --all-files
+      #- name: Run pre-commit hooks
+      #  run: uv run pre-commit run --all-files
 
       - name: Lint with ruff
         run: uv run ruff check --output-format=github
@@ -69,10 +69,3 @@ jobs:
           ALBERT_API_KEY: ${{ secrets.ALBERT_API_KEY }}
           POSTGRES_URL: postgresql+psycopg2://postgres:postgres@localhost:5432/evalap_test
         run: uv run pytest -v --tb=short --cov=evalap --cov-report=xml
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4
-        if: always()
-        with:
-          file: ./coverage.xml
-          fail_ci_if_error: false
