refactor: move uvicorn startup logic to dedicated shell script

--- a/supervisord.dev.conf
+++ b/supervisord.dev.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:uvicorn]
-command=bash -c 'alembic -c evalap/api/alembic.ini upgrade head && uvicorn evalap.api.main:app --host 0.0.0.0 --port 8000 --reload'
+command=bash scripts/start_uvicorn.sh
 directory=/app
 autostart=true
 autorestart=true
