docs: add Hugging Face token setup instructions and environment variable

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ ADMIN_TOKEN=your-admin-token-here
 # =============================================================================
 # External API Keys
 # =============================================================================
+# Hugging Face Token (recommended for downloading datasets)
+# Get your token at: https://huggingface.co/settings/tokens
+HF_TOKEN=your-huggingface-token-here
+
 # OpenAI API Key
 OPENAI_API_KEY=your-openai-api-key-here
 
