--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,10 +86,10 @@ distribution = false
 line-length = 111
 
 [tool.ruff.format]
-exclude = ["evalap/api/alembic/versions/", "notebooks/", ".specify/", ".windsurf/", ".cursor/"]
+exclude = ["evalap/api/alembic/versions/", "notebooks/", ".specify/", ".windsurf/", ".cursor/", ".claude/"]
 
 [tool.ruff.lint]
-exclude = [".specify/", ".windsurf/", ".cursor/"]
+exclude = [".specify/", ".windsurf/", ".cursor/", ".claude/"]
 select = [
     "F",    # Pyflakes (includes undefined variables)
     "E",    # pycodestyle errors
