fix: exclude migrations and notebooks from ruff linting in CI/CD
- Add evalap/api/alembic/versions/ and notebooks/ to [tool.ruff.lint] exclude list
- Ensures consistency between format and lint excludes in pyproject.toml
- Remove explicit --select flag from GitHub Actions workflow to use pyproject.toml config
- Fixes CI/CD failures on PR #269 where migrations were being linted

The exclude patterns now match across:
- pyproject.toml [tool.ruff.format] exclude
- pyproject.toml [tool.ruff.lint] exclude
- .ruffignore file
- .pre-commit-config.yaml hooks

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -59,7 +59,7 @@ jobs:
       #  run: uv run pre-commit run --all-files
 
       - name: Lint with ruff
-        run: uv run ruff check --output-format=github --config=pyproject.toml --select=F,Q,I
+        run: uv run ruff check --output-format=github --config=pyproject.toml
 
       - name: Check formatting
         run: uv run ruff format --check --diff --config=pyproject.toml
