--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,7 +89,7 @@ line-length = 111
 exclude = ["evalap/api/alembic/versions/", "notebooks/", ".specify/", ".windsurf/", ".cursor/", ".claude/"]
 
 [tool.ruff.lint]
-exclude = [".specify/", ".windsurf/", ".cursor/", ".claude/"]
+exclude = ["evalap/api/alembic/versions/", "notebooks/", ".specify/", ".windsurf/", ".cursor/", ".claude/"]
 select = [
     "F",    # Pyflakes (includes undefined variables)
     "E",    # pycodestyle errors
