chore: ignore B008 (FastAPI Depends false positive) in ruff linting
- Add B008 to ignore list in [tool.ruff.lint]
- B008 flags FastAPI Depends() in function defaults as a bug, but it's intentional
- This is a well-known false positive in the FastAPI community
- Eliminates 64 errors (48% of remaining errors)
- Total errors reduced from 133 to 69 (48% reduction)

Error breakdown after change:
- E501: 36 (line too long)
- B904: 16 (exception handling)
- B905: 5 (zip without strict)
- B007: 5 (unused loop variables)
- B023: 4 (lambda binding)
- W291: 2 (trailing whitespace)
- E722: 1 (bare except)

References:
- FastAPI GitHub Issue #1522: Confirmed B008 is a false positive for Depends()
- Multiple Stack Overflow answers recommend ignoring B008 for FastAPI projects

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ fixable = ["ALL"]
 unfixable = []
 ignore = [
     "E711", # Disable E711 specifically to prevent issues with SQLAlchemy
+    "B008", # FastAPI Depends() in defaults is intentional, not a bug (false positive)
     #"F403", # import *
     #"F841", # never used variables
 ]
