fix: ignore B023 (lambda in loop) - false positive for pandas.apply() patterns
- Add B023 to ignore list in [tool.ruff.lint]
- B023 flags lambda/function definitions in loops that reference loop variables
- In EvalAP, all 4 B023 errors are false positives from pandas.apply() patterns
- Lambda functions are executed immediately, not stored for later use
- This is a legitimate and common pattern in pandas data manipulation
- Eliminates 4 false positive errors (9% reduction)
- Total errors reduced from 42 to 38 (90% reduction from initial 165)

Error breakdown after change:
- E501: 36 (line too long)
- W291: 2 (trailing whitespace)

B023 errors: 4 → 0 ✓

References:
- B023 is designed to catch late binding closure bugs
- Not applicable to immediately-executed lambdas in pandas operations
- Similar to B008 (FastAPI false positive) - legitimate use case, not a bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,7 @@ unfixable = []
 ignore = [
     "E711", # Disable E711 specifically to prevent issues with SQLAlchemy
     "B008", # FastAPI Depends() in defaults is intentional, not a bug (false positive)
+    "B023", # Lambda/function in loop with loop variable is intentional in pandas.apply() patterns (false positive)
     #"F403", # import *
     #"F841", # never used variables
 ]
